manifests/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartbuilding-ingress
  namespace: smartbuilding-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Set to true if using TLS
spec:
  ingressClassName: nginx
  rules:
  - host: smartbuilding.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 9000
      - path: /mercure
        pathType: Prefix
        backend:
          service:
            name: mercure-service
            port:
              number: 80
      - path: /phpmyadmin
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
      - path: /caddy
        pathtype: Prefix
        backend:
          service:
            name: caddy-service
            port:
              number: 80
